[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Battle/BattleCore.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Test/TestBattleCore.gd" type="Script" id=2]

[node name="TestBattleCore" type="Node"]
script = ExtResource( 2 )

[node name="BattleCore" parent="." instance=ExtResource( 1 )]
bullet_speed = 75
player_radius = 100

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Output" type="TextEdit" parent="Panel"]
margin_left = 12.0
margin_top = 11.0
margin_right = 844.0
margin_bottom = 544.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoomInput" type="TextEdit" parent="Panel"]
margin_left = 848.0
margin_top = 12.0
margin_right = 995.0
margin_bottom = 38.0

[node name="StepButton" type="Button" parent="Panel"]
margin_left = 854.0
margin_top = 45.0
margin_right = 994.0
margin_bottom = 89.0
text = "Step"

[node name="PrintStateButton" type="Button" parent="Panel"]
margin_left = 855.0
margin_top = 100.0
margin_right = 995.0
margin_bottom = 144.0
text = "Print State"
[connection signal="pressed" from="Panel/StepButton" to="." method="_on_StepButton_pressed"]
[connection signal="pressed" from="Panel/PrintStateButton" to="." method="_on_PrintStateButton_pressed"]
